--- a/static/style/one-band.css
+++ b/static/style/one-band.css
@@ -3,16 +3,7 @@
 
 :root {
 
-    /* background: #FEFAE0;
-      hover: #606C38;
-      navbar: #283618;
-      buttons; #DDA15E;
-      #BC6C25
-      image {
-      display: block;
-      max-width: 100%;
-    */
-    --font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+    --font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --fs-300: Clamp(0.94rem, calc(0.92rem + 0.08vw));
     --fs-400: Clamp(0.94rem, calc(0.92rem + 0.07vw));
     --fs-500: Clamp(0.94rem, calc(0.92rem + 0.06vw));
@@ -22,35 +13,28 @@
     --fs-900: Clamp(0.94rem, calc(0.92rem + 0.02vw));
   
     --primary-color:hsl(353, 69%, 43%);
-    /* --primary-color:#2c3e50; */
-    --clr-primary-700:hsl(200, 89%, 15%);
-    --clr-primary-600:hsl(200, 89%, 20%);
-    --clr-primary-500:hsl(200, 89%, 35%);
-    --clr-primary-400:hsl(200, 89%, 55%);
-    --clr-primary-300:hsl(200, 89%, 67%);
-    --clr-primary-200:hsl(200, 89%, 80%);
+    --clr-primary-700:hsl(353, 69%, 15%);
+    --clr-primary-600:hsl(353, 69%, 20%);
+    --clr-primary-500:hsl(353, 69%, 35%);
+    --clr-primary-400:hsl(353, 69%, 43%);
+    --clr-primary-300:hsl(353, 69%, 57%);
+    --clr-primary-200:hsl(353, 69%, 75%);
   
     --secondary-color:hsl(228, 57%, 0%);
-    /* --secondary-color:#955656; */
-    /* --secondary-color:#384849; */
-    --clr-secondary-700:hsl(144, 62%, 5%);
-    --clr-secondary-600:hsl(114, 65%, 15%);
-    --clr-secondary-500:hsl(114, 55%, 25%);
-    --clr-secondary-400:hsl(114, 45%, 35%);
-    --clr-secondary-300:hsl(114, 35%, 45%);
-    --clr-secondary-200:hsl(114, 25%, 55%);
+    --clr-secondary-700:hsl(228, 57%, 5%);
+    --clr-secondary-600:hsl(228, 57%, 15%);
+    --clr-secondary-500:hsl(228, 57%, 25%);
+    --clr-secondary-400:hsl(228, 57%, 35%);
+    --clr-secondary-300:hsl(228, 57%, 45%);
+    --clr-secondary-200:hsl(228, 57%, 55%);
   
-    --accent-color:hsl(32, 98%, 50%);
-    /* --accent-color: #f39c12; */
-    --clr-accent-700:hsl(49, 75%, 54%);
-    --clr-accent-600:hsl(33, 75%, 47%);
-    --clr-accent-500:hsl(33, 75%, 40%);
-    --clr-accent-400:hsl(33, 75%, 35%);
-    --clr-accent-300:hsl(33, 75%, 30%);
-    --clr-accent-200:hsl(33, 75%, 25%);
+    --clr-accent-700:hsl(32, 98%, 15%);
+    --clr-accent-600:hsl(32, 98%, 25%);
+    --clr-accent-500:hsl(32, 98%, 35%);
+    --clr-accent-400:hsl(32, 98%, 45%);
+    --clr-accent-300:hsl(32, 98%, 55%);
+    --clr-accent-200:hsl(32, 98%, 65%);
   
-    --accent-color:hsl(28, 81%, 90%);
-    /* --neutral-color: #ecf0f1; */
     --clr-neutral-700:hsl(182, 75%, 35%);
     --clr-neutral-600:hsl(182, 75%, 45%);
     --clr-neutral-500:hsl(182, 75%, 55%);
@@ -66,6 +50,7 @@
     --clr-text-300:hsl(194, 15%, 32%);
     --clr-text-200:hsl(194, 9%, 27%);
   }
+
 * {
     margin: 0;
     padding: 0;
@@ -80,21 +65,18 @@ body {
     text-size-adjust: var(--fs-500);
     color: var(--clr-text-200);
     text-decoration: none;
-    background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    background: linear-gradient(135deg, var(--clr-primary-700), var(--clr-secondary-500));
     position: relative;
     z-index: 1000;
     margin-bottom: 60px;
 }
-/* Navigation */
+
 header, main, footer {
     display: block;
 }
 
 header {
-    background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+    background: linear-gradient(135deg, var(--clr-primary-700), var(--clr-secondary-700), var(--clr-secondary-500));
     color: #cfa77a;
     padding: 1rem 0;
     position: fixed;
@@ -137,14 +119,14 @@ header {
   }
   
   nav {
-      background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-      display: flex;
-      align-items: center;
-      border-radius: 8px;
-      padding: 10px 20px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      margin: 0 auto; /* Center the nav */
-  }
+    background: linear-gradient(135deg, var(--clr-secondary-500));
+    display: flex;
+    align-items: center;
+    border-radius: 8px;
+    padding: 10px 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
+}
   
   nav a {
     color: white;
@@ -169,7 +151,7 @@ header {
   
   .search-container button {
     background-color: #cfa77a;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: var(--font-family);
     padding: 5px 15px;
     border: none;
     border-radius: 5px;
@@ -188,9 +170,8 @@ header {
     border: 1px solid var(--primary-color);
     border-radius: 10px 10px 10px  10px;
     outline: none;
-  }
+}
 
-/* Body */
 .artist-wrapper {
     display: flex;
     flex-direction: column;
@@ -282,7 +263,7 @@ section {
     min-height: auto;
     border-radius: 35px;
     padding: 50px;
-    background: hsl(353, 40%, 40%);
+    background: linear-gradient(135deg, var(--clr-primary-700), var(--clr-secondary-500));
     box-shadow: 25px 25px 75px rgba(0,0,0,.25), 10px 10px 70px rgba(0,0,0,.25), inset 5px 5px 10px rgba(255, 255, 255, .2),  inset -5px -5px 15px rgba(0,0,0,.75);
 }
 
@@ -404,16 +385,16 @@ section {
 footer {
     position: fixed;
     bottom: 0;
-    background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-    color: var(--neutral-color);
+    background: linear-gradient(135deg, var(--clr-primary-500), var(--clr-secondary-700));
+    color: var(--clr-text-600);
     text-align: center;
     display: flex; 
     align-items: center;
     justify-content: center;
     width: 100%;
     padding: 10px 0;
-    border-radius: 20px 20px 0 0; /* Rounded top corners */
-    z-index: 1000; /* Ensure footer is on top */
+    border-radius: 20px 20px 0 0;
+    z-index: 1000;
   }
   
   .footer-container {
