--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="/script/script.js" defer></script>
-    <link rel="stylesheet" href="/static/style/style.css">
+    <!-- <link rel="stylesheet" href="/static/style/style.css"> -->
     <link rel="stylesheet" href="../static/style/artist.css">
     <title>Groupie Tracker</title>
 </head>
